--- a/style/index.css
+++ b/style/index.css
@@ -1,7 +1,23 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
     background-color: #08bc94;
+}
+
+h2 {
+    margin: 0;
+    padding: 0;
+    font-size: 3em;
+}
+
+h3 {
+    margin: 0;
+    padding: 0;
+    font-size: 2em;
 }
 
 
@@ -24,7 +40,7 @@ body {
     align-items: center;
     flex-wrap: wrap;
 
-    background-color: #045e49;
+    background-color: #73ab74;
 }
 
 #logo-container {
@@ -86,6 +102,40 @@ body {
 #arrow {
     height: 10vh;
     animation: jumping 0.5s infinite alternate;
+}
+
+#content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#presentation-block {
+    width: 80vw;
+    padding: 1em;
+    margin-bottom: 5vh;
+
+    background-color: #045e49;
+}
+
+#customer-block-container {
+    display: flex;
+    justify-content: space-evenly;
+
+    width: 90vw;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+}
+
+
+.customer-block {
+    width: 40vw;
+    padding: 1em;
+    background-color: #045e49;
+}
+
+.customer-block > button {
+    margin-top: 2vh;
 }
 
 
