--- a/style/index.css
+++ b/style/index.css
@@ -20,6 +20,15 @@ h3 {
     font-size: 2em;
 }
 
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 
 #user-logo {
     height: 5vh;
