rework front end

--- a/style/basic.css
+++ b/style/basic.css
@@ -3,8 +3,8 @@ body {
     height: 100%;
     
     font-family: Helvetica;
-
-    background-color: #08bc94;
+    
+    background-color: #e8f1ef;
 }
 
 input[type ="text"], input[type ="email"], input[type ="password"] {
