--- a/style/index.css
+++ b/style/index.css
@@ -5,7 +5,8 @@ html {
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #08bc94;
+    background-color: #d6e5e1;
+    line-height: 1.5;
 }
 
 h2 {
@@ -18,6 +19,19 @@ h3 {
     margin: 0;
     padding: 0;
     font-size: 2em;
+    
+}
+
+button {
+    background-color: white;
+    font-size: 16px;
+    font-weight: bold;
+    color: rgb(73, 73, 73);
+    padding-right: 5px;
+    padding-left: 5px;
+    border-radius: 8px;
+    margin: 5px;
+    border: solid white 2px;
 }
 
 a {
@@ -49,7 +63,7 @@ a:hover {
     align-items: center;
     flex-wrap: wrap;
 
-    background-color: #73ab74;
+    background-color: #7cb17d;
 }
 
 #logo-container {
@@ -60,6 +74,8 @@ a:hover {
     align-items: center;
     flex-wrap: wrap;
     justify-content : center;
+    background-image: url("../img/header_banner.jpg");
+    background-position: center;
 }
 
 #logo-shadow {
@@ -69,7 +85,8 @@ a:hover {
     padding: 3%;
     border-radius: 50%;
 
-    background-color: #045e49;
+    border: 3px dashed white;
+    background-color: #ffffff4d;
 }
 
 #logo {
@@ -90,7 +107,7 @@ a:hover {
     height: 14vh;
     width: 14vh;
     border-radius: 50%;
-    background-color: #73ab74;
+    background-color: #7cb17d;
     
     display: flex;
     align-items: center;
@@ -123,8 +140,10 @@ a:hover {
     width: 80vw;
     padding: 1em;
     margin-bottom: 5vh;
+    border-radius: 2px;
+    box-shadow: 3px 3px 2px rgb(198, 195, 190);
 
-    background-color: #045e49;
+    background-color: #7cb17d;
 }
 
 #customer-block-container {
@@ -139,8 +158,11 @@ a:hover {
 
 .customer-block {
     width: 40vw;
-    padding: 1em;
-    background-color: #045e49;
+    padding-right: 1em;
+    padding-left: 1em;
+    border-radius: 2px;
+    box-shadow: 3px 3px 2px rgb(198, 195, 190);
+    background-color: #7cb17d;
 }
 
 .customer-block > button {
