Slight style improvements

--- a/style/index.css
+++ b/style/index.css
@@ -39,10 +39,7 @@ button {
 }
 
 button:hover {
-    padding-top: 15px;
-    padding-left: 25px;
-    padding-right: 25px;
-    padding-bottom: 15px;
+    text-decoration: underline;
 }
 
 button:active {
