--- a/style/basic.css
+++ b/style/basic.css
@@ -1,6 +1,6 @@
 body {
     height: 100%;
-    overflow-y: hidden;
+    overflow-x: hidden;
     
     font-family: Helvetica;  
     background-color: #e8f1ef;
