--- a/style/index.css
+++ b/style/index.css
@@ -4,7 +4,7 @@ html {
 
 body {
     margin: 0;
-    overflow-y: hidden;
+    overflow-x: hidden;
     
     line-height: 1.5;
     font-family: 'Roboto', sans-serif;
