--- a/style/menu.css
+++ b/style/menu.css
@@ -34,7 +34,7 @@ nav {
     right: 1.5em;
     position: absolute;
 
-    width: 16vw;
+    width: auto;
     padding: 0.5em;
     border-radius: 15px;
 
@@ -144,7 +144,12 @@ nav {
     #account-pill {
         top: -20vw;
         right: 30px;
-        width: 50vw;
+        width: auto;
+        max-width: 50vw;
+
+        display: flex;
+        flex-wrap: nowrap;
+        overflow: hidden;
     }
 
     #account-pill > img {
@@ -153,6 +158,7 @@ nav {
 
     #account-pill > a {
         font-size: 3vw;
+
     }
 
 
