--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -7,6 +7,16 @@ td {
     border: 1px solid  black;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+
 #content {
     padding: 1em;
 }
