--- a/style/catalog.css
+++ b/style/catalog.css
@@ -1,37 +1,39 @@
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+a {
+    color: black;
+    text-decoration: none;
 }
+
+h1 {
+    text-align: center;
+}
+
 
 .container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
     align-items: center;
-    width: 75%;
+    justify-content: center;
+    width: 100%;
 }
 
 .article {
+    margin: 25px;
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
-    margin: 50px;
+    flex-direction: column;
 
-    padding-right: 20px;
-    padding-left: 20px;
+    padding: 20px;
     border-radius: 3.5px;
-    background-color: rgb(240, 240, 240);
-}
 
-.button {
-    border-radius: 4px;
-    padding: 5px;
-    min-width: 70px;
+    border: 1px solid black;
     background-color: white;
-    border: 2px solid rgb(228, 228, 228);
 }
 
-.item {
+.article-text {
     margin-bottom: 7px;
+}
+
+.article-picture {
+    height: 20em;
+    width: 20em;
 }
