--- a/style/basic.css
+++ b/style/basic.css
@@ -15,6 +15,15 @@ button {
     padding: 5px;
 }
 
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 #mobile-menu-icon {
     display: none;
 }
