--- a/style/basic.css
+++ b/style/basic.css
@@ -15,15 +15,17 @@ button {
     padding: 5px;
 }
 
-a {
-    color: black;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
 
 #mobile-menu-icon {
     display: none;
+}
+
+
+.link {
+    color: black;
+    text-decoration: underline;
+}
+
+.link:hover {
+    color: gray;
 }
