--- a/style/catalog.css
+++ b/style/catalog.css
@@ -3,10 +3,13 @@ a {
     text-decoration: none;
 }
 
-h1 {
+h1, p {
     text-align: center;
 }
 
+h3 {
+    color: rgb(26, 26, 39);
+}
 
 .container {
     display: flex;
@@ -23,9 +26,10 @@ h1 {
     flex-direction: column;
 
     padding: 20px;
-    border-radius: 3.5px;
+    border-radius: 2px;
 
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    box-shadow: 2px 1.5px 2px rgb(198, 195, 190);
     background-color: white;
 }
 
@@ -36,4 +40,5 @@ h1 {
 .article-picture {
     height: 20em;
     width: 20em;
+    background-color: rgb(233, 233, 233);
 }
